...

                <TextView
                    android:id="@+id/question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:labelFor="@id/editText"
                    android:paddingStart="@dimen/xlarge"
                    android:paddingTop="@dimen/medium"
                    android:paddingEnd="0dp"
                    android:paddingBottom="@dimen/medium"
                    android:text="@string/question"
                    app:layout_constraintBottom_toTopOf="@id/error"
...
                app:layoutManager="LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/errors">

            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/addLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_label"
                app:layout_constraintTop_toBottomOf="@+id/rating_label_recycler" />

        </androidx.constraintlayout.widget.ConstraintLayout>
...
