...
        android:label="@string/action_social" />
    <fragment
        android:id="@+id/nav_support"
        android:name="com.mydigitalmedicaljournal.ui.support.SupportFragment"
        android:label="@string/action_support" />
    <fragment
        android:id="@+id/nav_templates"
        android:name="com.mydigitalmedicaljournal.ui.templates.ManageTemplatesFragment"
        android:label="@string/manage_templates">
        <action
            android:id="@+id/action_manageTemplates_to_editorFragment"
            app:destination="@id/editorFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_categories"
        android:name="com.mydigitalmedicaljournal.ui.categories.ManageCategoriesFragment"
        android:label="@string/manage_categories" >
        <action
...
